# cursor-helper

./: .cursorrules  .gitignore  Cargo.toml  README.md  metadata.json  tasks.md
src/: cli.rs  db.rs  error.rs  lib.rs  main.rs  metadata.rs  models.rs  workspace.rs
